# anomtrans

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  angrep  build_release_local  build_release_ls5  build_test  build_test_local  build_test_ls5  run_tests_ls5  setup.py  setup_eigen
include/anomtrans/: Rashba_Hamiltonian.h  berry.h  collision.h  derivative.h  disorder.h  dm_graph.h  driving.h  dyn_dm_graph.h  energy.h  fermi_surface.h  grid_basis.h  hamiltonian.h  rho0.h  special_functions.h  square_tb_spectrum.h  util.h
include/anomtrans/disorder/: collision.h  collision_od.h  disorder.h
include/anomtrans/models/: Rashba_Hamiltonian.h  square_tb_spectrum.h  tmd_nn_Hamiltonian.h  wannier90_Hamiltonian.h  wsm_continuum_Hamiltonian.h  wsm_continuum_mu5_Hamiltonian.h  wsm_continuum_node_Hamiltonian.h
include/anomtrans/observables/: conductivity.h  current.h  energy.h  rho0.h  spin.h
include/anomtrans/util/: lattice.h  mat.h  special_functions.h  util.h  vec.h
pyanomtrans/: derivative.py  energy.py  energy_test.py  grid_basis.py  grid_basis_test.py  plot_2d_bz.py  plot_Rashba.py  plot_fermi_surface.py  plot_series.py  plot_slice_total.py  plot_spectrum.py  plot_wsm.py  plot_wsm_mu5.py  py_fermi_surface.py  rho0.py  special_functions.py  special_functions_test.py  square_tb_Hamiltonian.py
sage/: Rashba.sage
src/: CMakeLists.txt  MPIPrettyUnitTestResultPrinter.cpp  MPIPrettyUnitTestResultPrinter.h  Rashba_Hamiltonian.cpp  Rashba_Hamiltonian.h  Rashba_Hamiltonian_test.cpp  UnitTestMain.cpp  basic_test.cpp  berry.h  collision.cpp  collision.h  collision_od.h  conductivity.h  constants.h  derivative.h  derivative_test.cpp  disorder.h  dist_vec.h  dm_graph.cpp  dm_graph.h  driving.h  driving_test.cpp  dyn_dm_graph.cpp  energy.h  energy_test.cpp  fermi_surface.cpp  grid_basis.h  grid_basis_test.cpp  hamiltonian.h  mat.cpp  mat.h  mat_test.cpp  mpi.h  pauli.cpp  pauli.h  rho0.cpp  rho0.h  special_functions.cpp  special_functions.h  special_functions_test.cpp  (+11 more)
src/disorder/: collision.cpp
src/models/: Rashba_Hamiltonian.cpp  square_tb_spectrum.cpp  tmd_nn_Hamiltonian.cpp  wannier90_Hamiltonian.cpp  wsm_continuum_Hamiltonian.cpp  wsm_continuum_mu5_Hamiltonian.cpp  wsm_continuum_node_Hamiltonian.cpp
src/observables/: energy.cpp  pauli.cpp  rho0.cpp  spin.cpp
src/util/: MPIPrettyUnitTestResultPrinter.cpp  mat.cpp  special_functions.cpp  util.cpp  vec.cpp
test/: CMakeLists.txt  Rashba_Hamiltonian_test.cpp  Rashba_magnetic_Hamiltonian_test.cpp  derivative_test.cpp  energy_test.cpp  grid_basis_test.cpp  mat_test.cpp  special_functions_test.cpp  square_tb_spectrum_test.cpp  util_test.cpp  vec_test.cpp  wannier90_Hamiltonian_test.cpp  wsm_continuum_Hamiltonian_test.cpp
test_regression_data/: .gitattributes  Rashba_Hamiltonian_test_out.json  Rashba_magnetic_Hamiltonian_test_out.json  derivative_test_out.json  derivative_test_out_0.json  derivative_test_out_1.json  derivative_test_out_10.json  derivative_test_out_11.json  derivative_test_out_12.json  derivative_test_out_13.json  derivative_test_out_14.json  derivative_test_out_15.json  derivative_test_out_16.json  derivative_test_out_17.json  derivative_test_out_18.json  derivative_test_out_19.json  derivative_test_out_2.json  derivative_test_out_20.json  derivative_test_out_21.json  derivative_test_out_22.json  derivative_test_out_23.json  derivative_test_out_3.json  derivative_test_out_4.json  derivative_test_out_5.json  derivative_test_out_6.json  derivative_test_out_7.json  derivative_test_out_8.json  derivative_test_out_9.json  driving_test_out.json  square_tb_spectrum_test_out.json  wsm_continuum_ahe_test_out.json  wsm_continuum_cme_mu5_test_out.json  wsm_continuum_cme_test_out.json  wsm_continuum_quadratic_magnetoconductivity_test_out.json
test_regression_data/WSe2/bands/: WSe2.bands.in  WSe2.bands_post.in  WSe2.win  WSe2_bands.dat.gnu  WSe2_bands.dat.rap  bands.out  bands_post.out  run_wan_run
test_regression_data/WSe2/wannier/: WSe2.nnkp  WSe2.nscf.in  WSe2.pw2wan.in  WSe2.scf.in  WSe2.win  WSe2.wout  nscf.out  pw2wan.out  run_pw_post  run_wan_run  run_wan_setup  scf.out
trilinos_impl/: Doxyfile  README.md  run_tests_ls5
trilinos_impl/src/: CMakeLists.txt  dist_vec.h  energy.h  grid_basis_test.cpp  mpi.cpp  rho0_test.cpp  special_functions.h  square_tb_spectrum.cpp  vector_apply.h
